Rework environments and support composite workspace drivers
